# amazingLabyrinth

./: .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/configs/: levels.json
app/src/main/assets/configs/levels/: bee1.cbor  bee2.cbor  beginning.cbor  bunny.cbor  cat.cbor  firefly.cbor  frog.cbor  gopher.cbor  lonelyPlanet.cbor  mouse.cbor  pufferFish.cbor  rolarBear.cbor  starterModelCfg.cbor  testz.cbor
app/src/main/assets/license/: mitGlm.txt  mitLibcbor.txt  mitStb.txt
app/src/main/assets/models/: ball.modelcbor  ball.mtl  frog.modelcbor  frogFloor.modelcbor  frogFloor.modelcbor2  hole.mtl  mountainLandscape.mtl  wall.modelcbor  wall.mtl
app/src/main/assets/models/frog/: frog.modelcbor  frogFloor.modelcbor
app/src/main/assets/models/gopher/: crossjunction.modelcbor  gopher.modelcbor  rock.modelcbor  rock1.modelcbor  rock2.modelcbor  rock3.modelcbor  rock4.modelcbor  startOpen.modelcbor  startSide.modelcbor  straight.modelcbor  tjunction.modelcbor  turn.modelcbor
app/src/main/assets/models/levelStarter/: corner.modelcbor  corner.mtl  corridor.modelcbor  end.modelcbor  end.mtl  start.modelcbor  start.mtl
app/src/main/assets/models/mouse/: cheese.modelcbor  mouse.modelcbor
app/src/main/assets/models/movablePassage/: crossjunction.modelcbor  deadEnd.modelcbor  startCorner.modelcbor  startOpen.modelcbor  startSide.modelcbor  straight.modelcbor  tjunction.modelcbor  turn.modelcbor
app/src/main/assets/shaders/: colorGL.frag  colorNoShadowsGL.frag  dark2lightsColorGL.frag  dark2lightsGL.vert  darkTextureGL.frag  darkV2ColorGL.frag  darkV2TextureGL.frag  depthAndNormalGL.frag  depthAndNormalGL.vert  depthShaderGL.frag  depthShaderGL.vert  linearDepthGL.vert  linearDepthGL3.vert  normalGL.vert  normalGL3.vert  normalMapGL.vert  shaderGL.frag  shaderGL.vert  shaderNoShadowsGL.frag  shaderNoShadowsGL.vert  simpleGL.frag  simpleGL3.frag  simpleShadowsGL.frag  standardTextureGL.frag  standardWithShadowsGL.vert
app/src/main/cpp/: android.cpp  android.hpp  avoidVortexLevel.cpp  avoidVortexLevel.hpp  common.cpp  common.hpp  commonGL.cpp  drawer.cpp  drawer.hpp  gameRequester.cpp  gameRequester.hpp  graphics.cpp  graphics.hpp  graphicsCpuArch.hpp  graphicsGL.cpp  graphicsGL.hpp  graphicsVulkan.cpp  graphicsVulkan.hpp  level.cpp  level.hpp  levelFinish.cpp  levelFinish.hpp  levelStarter.cpp  levelStarter.hpp  levelTracker.cpp  levelTracker.hpp  mathGL.cpp  mathGraphics.cpp  mathGraphics.hpp  mathVulkan.cpp  maze.cpp  maze.hpp  mazeCollect.cpp  mazeCollect.hpp  mazeGL.cpp  mazeGL.hpp  mazeGraphics.cpp  mazeGraphics.hpp  mazeOpenArea.cpp  mazeOpenArea.hpp  (+19 more)
app/src/main/cpp/level/: generatedMazeAlgorithms.cpp  generatedMazeAlgorithms.hpp  level.cpp  level.hpp  levelFinish.cpp  levelFinish.hpp  levelSerializer.cpp  levelStarter.cpp  levelStarter.hpp  levelTracker.cpp  levelTracker.hpp  movablePassageAlgorithms.cpp  movablePassageAlgorithms.hpp
app/src/main/cpp/level/avoidVortexMaze/: level.cpp  level.hpp  loadData.hpp  serializer.cpp  serializer.hpp
app/src/main/cpp/level/avoidVortexOpenArea/: level.cpp  level.hpp  loadData.hpp  serializer.cpp  serializer.hpp
app/src/main/cpp/level/basic/: level.hpp  loadData.hpp  serializer.cpp  serializer.hpp
app/src/main/cpp/level/collectMaze/: level.cpp  level.hpp  loadData.hpp  serializer.cpp
app/src/main/cpp/level/fixedMaze/: level.cpp  level.hpp  loadData.hpp  serializer.cpp  serializer.hpp
app/src/main/cpp/level/generatedMaze/: level.cpp  level.hpp  loadData.hpp  serializer.cpp
app/src/main/cpp/level/levels/: avoidVortexLevel.cpp  avoidVortexLevel.hpp  avoidVortexLevelSerializer.cpp  fixedMaze.cpp  fixedMaze.hpp  fixedMazeSerializer.cpp  maze.cpp  maze.hpp  mazeAvoid.cpp  mazeAvoid.hpp  mazeAvoidSerializer.cpp  mazeCollect.cpp  mazeCollect.hpp  mazeCollectSerializer.cpp  mazeOpenArea.cpp  mazeOpenArea.hpp  mazeSerializer.cpp  movablePassage.cpp  movablePassage.hpp  movablePassageSerializer.cpp  movingQuadsLevel.cpp  movingQuadsLevel.hpp  movingQuadsLevelSerializer.cpp  openAreaLevel.cpp  openAreaLevel.hpp  openAreaLevelSerializer.cpp  rotatablePassage.cpp  rotatablePassage.hpp  rotatablePassageSerializer.cpp
app/src/main/cpp/level/movablePassage/: level.hpp  loadData.hpp  serializer.cpp  serializer.hpp
app/src/main/cpp/levelDrawer/: common.hpp  commonVulkan.hpp  levelDrawer.hpp  levelDrawerGL.cpp  levelDrawerGL.hpp  levelDrawerGraphics.hpp  levelDrawerVulkan.cpp  levelDrawerVulkan.hpp
app/src/main/cpp/levelTracker/: internals.hpp  levelTracker.cpp  levelTracker.hpp  types.hpp
app/src/main/cpp/levels/: generatedMazeAlgorithms.cpp  generatedMazeAlgorithms.hpp  levelFinish.cpp  levelFinish.hpp  levelTracker.cpp  levelTracker.hpp  movablePassageAlgorithms.cpp  movablePassageAlgorithms.hpp  movablePassageAlgorithmsSerializer.cpp  movablePassageAlgorithmsSerializer.hpp
app/src/main/cpp/renderDetails/: renderDetails.hpp  renderDetailsCommonVulkan.cpp  renderDetailsCommonVulkan.hpp  renderDetailsGL.cpp  renderDetailsGL.hpp  renderDetailsVulkan.cpp  renderDetailsVulkan.hpp
app/src/main/cpp/renderLoader/: registerGL.hpp  registerVulkan.hpp  renderLoader.hpp  renderLoaderGL.cpp  renderLoaderGL.hpp  renderLoaderVulkan.cpp  renderLoaderVulkan.hpp
app/src/main/res/layout/: activity_about.xml  activity_choose_level.xml  activity_license_viewer.xml  activity_main.xml  activity_settings.xml  select_level_dialog.xml
app/src/main/res/menu/: choose_level_menu.xml  main_menu.xml  settings_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/shaders/: colorShader.frag  colorShaderNoShadows.frag  darkColor.frag  darkShader.vert  darkTexture.frag  darkV2Color.frag  darkV2Texture.frag  depthAndNormal.frag  depthAndNormal.vert  depthShader.frag  depthShader.vert  linearDepth.vert  normal.vert  shader.frag  shader.vert  shaderNoShadows.frag  shaderNoShadows.vert  simple.frag  standardWithShadows.vert  standardWithShadowsColor.frag  standardWithShadowsTexture.frag
configsrc/: levels.json
(+374 files in other folders)
